// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Graph > gracefully renders a graph with a selected node id that does not exist 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.292526819072776px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a complex graph with six nodes and seven edges 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 75px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="flipcoin1"
      >
        flipcoin1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 45px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="tails1"
      >
        tails1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 105px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="heads1"
      >
        heads1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 45px; max-height: 10px; min-height: 10px; top: 125px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="flipcoin2"
      >
        flipcoin2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 185px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="heads2"
      >
        heads2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 85px; max-height: 10px; min-height: 10px; top: 185px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="tails2"
      >
        tails2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 53.599705252806814px; top: 65px; transform: rotate(-162.53607310815718deg); transition: left 0.5s, top 0.5s; width: 93.80058949438637px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 25.707473180927224px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 21px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: 20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 54.44597636009023px; top: 65px; transform: rotate(-169.35712925529643deg); transition: left 0.5s, top 0.5s; width: 152.10804727981954px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 85.70747318092722px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 81px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: 80px; top: 67px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 24.12512781199456px; top: 125px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 25.707473180927224px; top: 136.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 21px; top: 138.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: 20px; top: 127px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 23.342363464399483px; top: 125px; transform: rotate(-160.48412699041728deg); transition: left 0.5s, top 0.5s; width: 84.31527307120105px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 89.75px; top: 154px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 30.5px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 89.75px; top: 184px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 30.5px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.292526819072776px; top: 196.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 198.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 187px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 24.52670720293925px; top: 125px; transform: rotate(-170.01257842498643deg); transition: left 0.5s, top 0.5s; width: 161.9465855941215px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 169.75px; top: 154px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 30.5px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 169.75px; top: 184px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 30.5px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 65.70747318092722px; top: 196.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 61px; top: 198.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: 60px; top: 187px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 24.12512781199456px; top: 185px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.281833249334824px; top: 196.75px; transform: rotate(1.6211459136534117deg); transition: left 0.5s, top 0.5s; width: 159.56366649866965px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 198.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 187px; transform: rotate(360deg);"
      />
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 24.661645340032806px; top: 185px; transform: rotate(-171.10957674263614deg); transition: left 0.5s, top 0.5s; width: 181.6767093199344px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 65.71358867470941px; top: 196.75px; transform: rotate(1.8542517148477853deg); transition: left 0.5s, top 0.5s; width: 139.57282265058117px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: 61px; top: 198.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: 60px; top: 187px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with a placeholder node and edge 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="placeholderNode_f1hx9p42 graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(154, 160, 166); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(154, 160, 166); height: 2px; left: 92.25px; top: 91.5px; transform: rotate(-90deg); transition: left 0.5s, top 0.5s; width: 25.5px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with a selected node 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode nodeSelected_f1a563lq"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(26, 115, 232); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(26, 115, 232); height: 2px; left: -14.292526819072776px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(26, 115, 232); height: 2px; left: -19px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(26, 115, 232); left: -20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with colored edges 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.292526819072776px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with colored nodes 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="background-color: red; left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="background-color: green; left: 65px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with one node 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with two connectd nodes 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.292526819072776px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with two connectd nodes in reverse order 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 65px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div>
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -15.87487218800544px; top: 65px; transform: rotate(-166.75948008481282deg); transition: left 0.5s, top 0.5s; width: 122.74974437601087px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -14.292526819072776px; top: 76.75px; transform: rotate(2.165615252902859deg); transition: left 0.5s, top 0.5s; width: 119.58505363814554px;"
      />
      <div
        class="line_fhwmucx"
        style="background-color: rgb(95, 99, 104); height: 2px; left: -19px; top: 78.5px; transform: rotate(270deg); transition: left 0.5s, top 0.5s;"
      />
      <div
        class="arrowHead_f1kkdghm"
        style="border-top-color: rgb(95, 99, 104); left: -20px; top: 67px; transform: rotate(360deg);"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > renders a graph with two disparate nodes 1`] = `
<DocumentFragment>
  <div
    class="root_f1vrykna"
  >
    <div
      class="node_flbuigk graphNode"
      style="left: 5px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node1"
      >
        node1
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
    <div
      class="node_flbuigk graphNode"
      style="left: 65px; max-height: 10px; min-height: 10px; top: 5px; transition: left 0.5s, top 0.5s; width: 10px;"
    >
      <div
        class="label_fmwr5sy"
        title="node2"
      >
        node2
      </div>
      <div
        class="icon_f1a6w1t7"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          title="Test icon tooltip"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Graph > shows an error message when the graph is invalid 1`] = `"<div class="root_f1vrykna"></div>"`;
